app/less/element/_input_dropdown.less
.input-ddown-block {
  position: relative;

  .ddown-entity, .dropdown-menu {
    width: 100%;
    z-index: 50;
    box-shadow: 0 9px 12px rgba(0, 0, 0, 0.2);
    border-radius: 0;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    background-color: #fff;
    margin-top: 2px;
    border: none;
    height: 350px;
    overflow: hidden;
    overflow-y: auto;

    li {
      width: 100%;
      display: block;
      padding: 16px 20px 17px;
      cursor: pointer;

      &:hover, &.active {
        background-color: fade(#999, 20%);

        a {
          background-color: transparent;
        }
      }

      a {
        cursor: pointer;
        width: 100%;
        display: block;
        .text-default-medium;

        &:hover, &:active, &:focus {
          background-color: transparent;
          color: @black;
        }

        &.event-choose-lnk {
          .text-default-big;
          display: flex;
          justify-content: flex-start;
          align-items: center;

          .image {
            img {
              width: 40px;
              height: 40px;
              display: inline-block;
              margin-right: 20px;
            }

            &.rounded {
              img {
                border-radius: 4px;
              }
            }
            &.circle {
              img {
                border-radius: 50%;
              }
            }
          }

          .fa {
            display: inline-block;
            margin-right: 19px;
            font-size: 25 * @rem;
            color: @border-grey;
          }

          .content-block {
            display: inline-block;

            .content {
              display: block;
            }
            .label {
              display: block;
              .text-grey-medium;
              text-align: left;
              padding: 0;

              &.account-type {
                color: #2caa0c;
              }
            }
          }
        }


      }
    }
  }

  .control-label {
    .title-H2;
    color: #999;
    font-family: @iConnect-font-regular;
    font-size: 16 * @rem;
    font-weight: @fw-regular;
    line-height: 1.125;
    letter-spacing: .46px;
    margin-bottom: 0;
    opacity: .5;
    pointer-events: none;
    position: absolute;
    width: 100%;
    text-align: center;
    top: 18px;
    transform: scale(1);
    transform-origin: center top;
    transition: all .2s ease-in-out;
    z-index: 55;
  }

  .form-group {
    background-color: transparent;
    height: auto;
    border: 0;
    border-bottom: 1px solid @border-grey;
    border-radius: 0;
    margin-bottom: 0;

    &.focused {
      .control-label {
        opacity: 1;
        top: -12px;
        transform: scale(0.75);
        color: #999;
      }
    }
  }

  .input-field {
    .title-H2;
    color: @black;
    margin: 0;
    font-weight: @fw-regular;
    text-align: center;
    height: 65px;
    border-radius: 0;
    border-bottom: 1px solid transparent !important;
    min-width: 400px !important;
    max-width: 99.99% !important;
    transition: width 0.25s;
    padding-right: 10px;
    position: relative;
  }

  .bar {
    position: relative;
    display: block;
    width: 100%;
    z-index: 51;

    &:before, &:after {
      content: '';
      height: 1px;
      width: 0;
      bottom: -1px;
      position: absolute;
      background: @iConnect-orange;
      transition: 0.2s ease all;
      -moz-transition: 0.2s ease all;
      -webkit-transition: 0.2s ease all;
    }
    &:before {
      left: 50%;
    }
    &:after {
      right: 50%;
    }
  }

  input:focus ~ .bar:before, input:focus ~ .bar:after {
    width:50%;
  }

  .caret, .fa {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 10px;
    color: #e5e5e5;
  }

  .ic-caret {
    position: absolute;
    top: 48%;
    transform: translateY(-50%);
    right: 10px;
    color: #e5e5e5;

    &:hover {

      .ic-caret {
        svg {
          #ic_caret {
            fill: @burnt-sienna;
          }
        }
      }
    }
  }
}

.add-button {
  background-color: transparent;
  border: 1px dashed @border-grey;
  box-shadow: none;
  color: #4a90e2;
  font-size: 2.5rem;
  padding: 21.5px 20px;
  margin: 0 0 20px 0;
  border-radius: 4px;
  width: 100%;
  text-align: center;
  outline: none;

  &:visited {
    color: #4a90e2;
  }
  &:hover, &:focus {
    color: #2c72c4;
  }
  &:active {
    color: #2c72d8;
  }
}

.add-button-dropdown {
  border: none;
  min-width: 450px;
  right: 10px;
  left: auto;
  padding: 0;
  top: 83%;
  margin: 0;

  .header {
    padding: 16px 20px 17px 20px;
    border-bottom: 1px solid @border-grey;
    position: relative;

    &:before {
      content: '';
      background-image: url('@{ic-path-images}/wave_for_dropdown.svg');
      background-repeat: no-repeat;
      background-size: cover;
      position: absolute;
      top: -18px;
      right: 0;
      display: inline-block;
      width: 140px;
      height: 20px;
    }

  }
}

.ddown-notification {
  border: none;
  max-width: 343px;
  min-width: 343px;
  right: 10px;
  left: auto;
  padding: 0 20px 20px;
  top: 83%;
  margin: 0;

  .header {
    padding: 16px 0 17px;
    border-bottom: 1px solid @border-grey;
    position: relative;
    justify-content: flex-end;
    display: flex;
    align-items: center;

    .marker-lnk {
      .h1-blue;
    }
  }

  .notifications-items-list {
    margin: 0;

    .item {
      display: flex;
      justify-content: flex-start;
      flex-wrap: nowrap;
      align-items: center;
      padding: 20px 0;
      border-bottom: 1px solid @border-grey;
      cursor: pointer;

      .avatar-block {
        position: relative;
        margin-right: 20px;

        .avatar-img {
          width: 30px;
          height: 30px;
          display: inline-block;
        }

        &.circle {
          .avatar-img {
            border-radius: 50%;
          }
        }
      }

      .info-block {
        .from-to-block {
          display: flex;
          justify-content: space-between;
          align-items: flex-end;
          flex-wrap: wrap;

          .from {
            .text-default-small;
          }
        }

        .text-block-info {
          .text-default-small;

          &.linked {
            .h1-blue;
          }
        }
      }

      &.new {
        background-color: #fafaff;
        margin: 0 -20px;
        padding: 20px;
      }
    }
    .item-btn {
      .ic-btn {
        max-height: 40px;
        line-height: 3.2;
        margin-top: 20px;
        width: 100%;
        max-width: inherit;
        display: block;
      }
    }
  }
}

